--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-router": "^1.131.5",
     "@tanstack/react-router-devtools": "^1.131.5",
     "@tauri-apps/api": "^2",
@@ -19,6 +20,7 @@
     "@tauri-apps/plugin-opener": "^2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11",
     "tauri-plugin-clipboard-api": "^2.1.11"
   },
   "devDependencies": {
