--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": " vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.85.0",
     "@tanstack/react-router": "^1.131.5",
     "@tanstack/react-router-devtools": "^1.131.5",
     "@tauri-apps/api": "^2",
@@ -27,14 +28,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
+    "mitt": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^2.1.0",
     "tailwindcss": "^4.1.11",
     "tauri-plugin-clipboard-api": "^2.1.11"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@tanstack/router-plugin": "^1.131.5",
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.2.1",
