--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,8 +27,9 @@ tauri-plugin-fs = "2"
 tauri-plugin-clipboard = "2.1.11"
 tauri-plugin-upload = "2"
 clipboard-rs = "0.3.0"
+surf = "2.3.2"
+tauri-plugin-http = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
 tauri-plugin-global-shortcut = "2"
-
