--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tauri-apps/plugin-global-shortcut": "~2",
     "@tauri-apps/plugin-http": "~2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-store": "~2",
     "@tauri-apps/plugin-upload": "~2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
