--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,8 @@ tauri-plugin-upload = "2"
 clipboard-rs = "0.3.0"
 surf = "2.3.2"
 tauri-plugin-http = "2"
+tauri-plugin-persisted-scope = "2"
+tauri-plugin-store = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
