--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ surf = "2.3.2"
 tauri-plugin-http = "2"
 tauri-plugin-persisted-scope = "2"
 tauri-plugin-store = "2"
+tauri-plugin-notification = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-autostart = "2"
