--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,7 +28,10 @@ tauri-plugin-clipboard = "2.1.11"
 tauri-plugin-upload = "2"
 clipboard-rs = "0.3.0"
 surf = "2.3.2"
-tauri-plugin-http = "2"
+tauri-plugin-http = { version = "2", features = [
+    "unsafe-headers",
+    "rustls-tls",
+] }
 tauri-plugin-persisted-scope = "2"
 tauri-plugin-store = "2"
 tauri-plugin-notification = "2"
